--- a/pages/pages-root-folder/404.md
+++ b/pages/pages-root-folder/404.md
@@ -6,7 +6,9 @@ teaser: "Maybe the webpage was moved or deleted; or did you maybe mistype the li
 sitemap: false
 permalink: "/404.html"
 ---
-## No problem!
+
+#  This distance sampling course is under active development, so some links might not be quite ready for you to view.  If you are anxious to wander the website, be aware of some hurdles along the way.
+
 
 Try...  
 ...to start over on the [home page]({{ site.baseurl }}/);  
