--- a/pages/pages-root-folder/404.md
+++ b/pages/pages-root-folder/404.md
@@ -5,6 +5,8 @@ subheadline: "HTTP 404"
 teaser: "Maybe the webpage was moved or deleted; or did you maybe mistype the link?"
 sitemap: false
 permalink: "/404.html"
+header:
+    image_fullwidth: ethan-sykes-222962-unsplash.jpg
 ---
 
 #  This distance sampling course is under active development, so some links might not be quite ready for you to view.  If you are anxious to wander the website, be aware of some hurdles along the way.
