sorted ch1 pdf links and 404

--- a/pages/pages-root-folder/404.md
+++ b/pages/pages-root-folder/404.md
@@ -9,7 +9,7 @@ header:
     image_fullwidth: ethan-sykes-222962-unsplash.jpg
 ---
 
-#  This distance sampling course is under active development, so some links might not be quite ready for you to view.  If you are anxious to wander the website, be aware of some hurdles along the way.
+This distance sampling course is under active development, so some links might not be quite ready for you to view.  If you are anxious to wander the website, be aware of some hurdles along the way.
 
 
 Try...  
