--- a/exercisepdfs/Ch7/biblio/workshopreprints.bib
+++ b/exercisepdfs/Ch7/biblio/workshopreprints.bib
@@ -1278,3 +1278,20 @@ Tenho IMPRESSO},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
+
+@Manual{distance_pkg,
+title = {Distance: Distance Sampling Detection Function and Abundance Estimation},
+author = {David Lawrence Miller},
+year = {2017},
+note = {R package version 0.9.7},
+url = {https://CRAN.R-project.org/package=Distance},
+}
+
+@Manual{r_language,
+title = {R: A Language and Environment for Statistical Computing},
+author = {{R Core Team}},
+organization = {R Foundation for Statistical Computing},
+address = {Vienna, Austria},
+year = {2018},
+url = {https://www.R-project.org/},
+}
