cite for buckland corrected

--- a/exercisepdfs/Ch7/E7-1-ducknests.rmd
+++ b/exercisepdfs/Ch7/E7-1-ducknests.rmd
@@ -250,6 +250,6 @@ Having run the function, the estimates are stored in the `dht` part of the objec
 nest.model4$dht
 ```
 
-\nocite{buckland_2015}
+\nocite{buckland_distance_2015}
 
 
